[package]
name = "jnet-mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.0", features = ["derive"] }
console-subscriber = "0.1"
tokio = { version = "1.23", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
